# libqualexpr

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
include/quality-expressions/: QualExprSemantic.h  QualExprSemanticLocal.h  QualExprSemanticNamespace.h  QualExprSemanticPAPI.h  QualityExpression.h  QualityExpressionsDB.h  QualityExpressionsDesk.h  QualityExpressionsEntry.h  QualityExpressionsProfiler.h  QualityExpressionsProfilerLocal.h  QualityExpressionsProfilerPAPI.h  QualityExpressionsProfilerSystem.h
m4/: ac_qe_boost.m4  ac_qe_libqualexpr.m4  ac_qe_papi.m4
src/: QualExprSemantic.cc  QualExprSemanticLocal.cc  QualExprSemanticPAPI.cc  QualityExpressions.cc  QualityExpressionsDB.cc  QualityExpressionsDesk.cc  QualityExpressionsProfilerLocal.cc  QualityExpressionsProfilerPAPI.cc
src/qualexpr-evaluator/: QualExprEvaluator.cc  QualExprEvaluatorParser.yy.m4  QualExprManager.cc
src/qualexpr-evaluator/include/qualexpr-evaluator/: BisonFlexInterface.h  QualExprAggregator.h  QualExprAggregatorBandwidth.h  QualExprAggregatorEvalTemplates.h  QualExprAggregatorImmediate.h  QualExprAggregatorNamespace.h  QualExprAggregatorSize.h  QualExprAggregatorTime.h  QualExprComputeNode.h  QualExprEvaluator.h  QualExprEvaluatorParserDriver.h  QualExprManager.h  QualExprSemanticAggregator.h  QualExprSemanticAggregatorDB.h
src/qualexpr-profiler/: QualExprProfiler.cc
src/qualexpr-profiler/include/qualexpr-profiler/: QualExprProfiler.h  QualExprProfilerEvents.h  QualExprProfilerSystem.h
